[package]
name = "rust_cache"
version = "0.1.0"
authors = ["Yosef Deray <yosefderay770@gmail.com>"]

[dependencies]
time = "0.1"

rust-crypto = { version = "0.2.34", optional = true }
redis = { version = "0.5.2", optional = true }

[features]
default = ["hash_map"]
hash_map = []
filesystem = ["rust-crypto"]
redis_integration = ["redis"]
all = ["hash_map", "filesystem", "redis_integration"]